--- a/app/css/style.css
+++ b/app/css/style.css
@@ -42,8 +42,7 @@ body {
   color: #676767; }
 
 html, body {
-  overflow-x: hidden;
-  height: 100%; }
+  overflow-x: hidden; }
 
 img {
   display: block;
